[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/Entrypoint.gd" type="Script" id=1]

[node name="Entrypoint" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenu" type="CenterContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="PanelContainer" parent="MainMenu"]
margin_left = 880.0
margin_top = 492.0
margin_right = 1025.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MenuContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 138.0
margin_bottom = 75.0

[node name="NewGameButton" type="Button" parent="MainMenu/MenuContainer/VBoxContainer"]
margin_right = 131.0
margin_bottom = 20.0
text = "New Game"

[node name="ContinueButton" type="Button" parent="MainMenu/MenuContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 131.0
margin_bottom = 44.0
text = "Continue"

[node name="WipeSaveButton" type="Button" parent="MainMenu/MenuContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 131.0
margin_bottom = 68.0
text = "DELETE SAVE DATA"

[connection signal="pressed" from="MainMenu/MenuContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MainMenu/MenuContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MainMenu/MenuContainer/VBoxContainer/WipeSaveButton" to="." method="_on_WipeSaveButton_pressed"]
